added android studio speed optimization steps